ADD:add styling for content

--- a/style.css
+++ b/style.css
@@ -7,3 +7,9 @@
     font-size: 3rem;
     text-align: center;
 }
+.content{
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
