--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap');
 :root{
     --white: #fffbfb;
     --grey: #f0eef1;
@@ -25,6 +26,7 @@ button{
 .body{
     display: flex;
     flex-direction: column;
+    font-family: 'Lato', sans-serif;
 }
 .header{
     height: 15vh;
